fix horixontal overflow

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -12,8 +12,7 @@
 .gallery__card {
   border-radius: 10px;
   overflow: hidden;
-  width: 282px;
-  height: 364px;
+  max-height: 361px;
   display: flex;
   flex-direction: column;
 }
@@ -29,6 +28,7 @@
   background-color: var(--bg-light);
   height: 100%;
   padding-inline: 21px;
+  padding-block: 25px 31px;
   display: flex;
   gap: 10px;
   align-items: center;
